# firo_robot

./: .gitmodules  .releaserc  Dockerfile
.github/workflows/: deploy_docker.yaml
firo_battery_state/: package.xml  setup.cfg  setup.py
firo_battery_state/firo_battery_state/: state_broadcaster.py
firo_battery_state/launch/: battery.launch.yaml
firo_battery_status/: package.xml  setup.cfg  setup.py
firo_battery_status/firo_battery_status/: send_status.py  status_broadcaster.py
firo_battery_status/launch/: battery.launch.yaml
firo_bringup/: CMakeLists.txt  README.md  package.xml
firo_bringup/launch/: firo_bringup.launch  hardware_interfaces.launch  web_bridge.launch
firo_measurements/: package.xml  setup.cfg  setup.py
firo_measurements/config/: telemetry.yaml
firo_measurements/firo_measurements/: configuration.py  influxdb_field.py  measurements_subscriber.py  telemetry_node.py
firo_measurements/launch/: measurements.launch.py  telemetry.launch.py
firo_ricoh/: package.xml  setup.cfg  setup.py
firo_ricoh/firo_ricoh/: image_capture.py
odrive_can_driver/: CMakeLists.txt  odrive_can_driver.xml  package.xml
odrive_can_driver/include/odrive_can_driver/: odrive_axis.hpp  odrive_can.hpp  odrive_hardware_interface.hpp
odrive_can_driver/include/odrive_can_driver/can/: can.hpp  can_read_thread.hpp  can_write_thread.hpp  parsing.hpp
odrive_can_driver/src/: odrive_axis.cpp  odrive_can.cpp  odrive_hardware_interface.cpp
odrive_can_driver/src/can/: can.cpp  can_read_thread.cpp  can_write_thread.cpp
rxsio_telemetry/: package.xml  setup.cfg  setup.py
rxsio_telemetry/launch/: telemetry.launch.py
