<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>firo_measurements</name>
  <version>0.0.0</version>
  <description>Nodes to synchronize robot telemetry from ROS topics with InfluxDB</description>
  <maintainer email="klaudiacoding@gmail.com">Klaudia Niedziałkowska</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>python3-influxdb-client-pip</depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2topic</exec_depend>
  <exec_depend>python3-pydantic</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
