<?xml version="1.0"?>
<package format="2">
  <name>firo_ricoh</name>
  <version>1.0.0</version>
  <description>Ricoh Theta camera image capture</description>
  <maintainer email="gabriel@gabrielb.dev">Gabriel Brzeziński</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>gphoto2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
